--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
     stage('Front-end') {
       agent {
         docker { 
-          image 'node:16-alpine
+          image 'node:16-alpine'
           args '-v volume:/app/data'
         }
       }
