--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
       agent {
         docker { 
           image 'maven:3.8.1-adoptopenjdk-11'
-          args '-v volume:/app/data'
+          args '--user root -v volume:/app/data'
         }
       }
       steps {
@@ -16,7 +16,7 @@ pipeline {
       agent {
         docker { 
           image 'node:16-alpine'
-          args '-v volume:/app/data'
+          args '--user root -v volume:/app/data'
         }
       }
       steps {
