--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "54.87.128.33:9000/"
+        SONAR_URL = "http://54.87.128.33:9000/"
       }
       steps {
         withCredentials([string(credentialsId: 'Sonarcube', variable: 'SONAR_AUTH_TOKEN')]) {
