--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -33,10 +33,11 @@ pipeline {
       environment {
         DOCKER_IMAGE = "maggi19/cicd:${BUILD_NUMBER}"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
       }
-      steps {
-        script {
+     steps {
+       script {
+          sh 'apk add --no-cache docker-cli'
+          sh 'docker --version'
           def dockerImage = docker.build("${DOCKER_IMAGE}", "java-maven-sonar-argocd-helm-k8s/spring-boot-app")
           docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
             dockerImage.push()
@@ -45,7 +46,7 @@ pipeline {
  
       }
 
-      }
+      
      
     stage('Update Deployment File') {
         environment {
