--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -60,7 +60,7 @@ pipeline {
             sh """
               apk add --no-cache git
               rm -rf ${GIT_REPO_NAME}
-              git clone https://github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
+              git clone https://${GIT_USER_NAME}:${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
               cd ${GIT_REPO_NAME}
               git config user.email "manushayerra01@gmail.com"
               git config user.name "Maggi12-max"
@@ -69,7 +69,8 @@ pipeline {
               git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
               git commit -m "Update deployment image to version ${BUILD_NUMBER}"
               git config credential.helper store
-              echo "https://${GIT_USER_NAME}:${GITHUB_TOKEN}@github.com" > ~/.git-credentials
+              echo "https://${GIT_USER_NAME}:${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git" > ~/.git-credentials
+
               git push origin HEAD:main
             """
             }
