--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -10,9 +10,7 @@ pipeline {
         
         stage('Checkout'){
            steps {
-                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/iam-veeramalla/cicd-end-to-end',
-                branch: 'main'
+                git branch: 'main', credentialsId: 'Github', url: 'https://github.com/Maggi12-max/Jenkins-Zero-To-Hero.git'
            }
         }
 
@@ -21,7 +19,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Buid Docker Image'
-                    docker build -t abhishekf5/cicd-e2e:${BUILD_NUMBER} .
+                    docker build -t maggi19/cicd:${BUILD_NUMBER} .
                     '''
                 }
             }
@@ -30,9 +28,12 @@ pipeline {
         stage('Push the artifacts'){
            steps{
                 script{
+                  withCredentials([usernamePassword(credentialsId: 'docker-cred', 
+                                                 usernameVariable: 'DOCKER_USER', 
+                                                 passwordVariable: 'DOCKER_PASS')]) {
                     sh '''
-                    echo 'Push to Repo'
-                    docker push abhishekf5/cicd-e2e:${BUILD_NUMBER}
+                      echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                      docker push maggi19/cicd:${BUILD_NUMBER}
                     '''
                 }
             }
@@ -40,8 +41,8 @@ pipeline {
         
         stage('Checkout K8S manifest SCM'){
             steps {
-                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git',
+                git credentialsId: 'Github', 
+                url: 'https://github.com/Maggi12-max/Jenkins-Zero-To-Hero.git',
                 branch: 'main'
             }
         }
@@ -49,15 +50,15 @@ pipeline {
         stage('Update K8S manifest & push to Repo'){
             steps {
                 script{
-                    withCredentials([usernamePassword(credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+                    withCredentials([usernamePassword(credentialsId: 'Github', variable: 'GITHUB_TOKEN')]) {
                         sh '''
-                        cat deploy.yaml
-                        sed -i '' "s/32/${BUILD_NUMBER}/g" deploy.yaml
-                        cat deploy.yaml
-                        git add deploy.yaml
+                        cat python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        sed -i '' "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        cat python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        git add python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git HEAD:main
+                        git push https://github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:main
                         '''                        
                     }
                 }
