--- a/python-jenkins-argocd-k8s/Dockerfile
+++ b/python-jenkins-argocd-k8s/Dockerfile
@@ -1,4 +1,7 @@
-FROM python:3
+FROM python:3.14-slim
+
+# Install distutils and other build essentials
+RUN apt-get update && apt-get install -y python3-distutils build-essential && rm -rf /var/lib/apt/lists/*
 RUN pip install django==3.2
 WORKDIR /app
 COPY . .
