--- a/python-jenkins-argocd-k8s/Dockerfile
+++ b/python-jenkins-argocd-k8s/Dockerfile
@@ -1,11 +1,11 @@
-FROM python:3.14-slim
+FROM python:3
 
-# Install distutils and other build essentials
-RUN apt-get update && apt-get install -y python3-distutils build-essential && rm -rf /var/lib/apt/lists/*
+RUN python -m ensurepip --upgrade
+RUN pip install setuptools==65.5.0  # brings distutils back
 RUN pip install django==3.2
+
 WORKDIR /app
 COPY . .
-
 RUN python manage.py migrate
 EXPOSE 8000
 CMD ["python","manage.py","runserver","0.0.0.0:8000"]
