--- a/python-jenkins-argocd-k8s/Dockerfile
+++ b/python-jenkins-argocd-k8s/Dockerfile
@@ -5,7 +5,7 @@ RUN pip install setuptools==65.5.0  # brings distutils back
 RUN pip install django==3.2
 
 WORKDIR /app
-COPY . .
+COPY python-jenkins-argocd-k8s/ .
 RUN python manage.py migrate
 EXPOSE 8000
 CMD ["python","manage.py","runserver","0.0.0.0:8000"]
