--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -51,10 +51,10 @@ pipeline {
         stage('Update K8S manifest & push to Repo'){
             steps {
                 script{
-                    withCredentials([usernamePassword(credentialsId: 'Git', variable: 'GITHUB_TOKEN')]) {
+                    withCredentials([string(credentialsId: 'Git', variable: 'GITHUB_TOKEN')]) {
                         sh '''
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        sed -i '' "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        sed -i "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s/deploy/deploy.yaml
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git add python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
