--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -52,15 +52,15 @@ pipeline {
             steps {
                 script{
                     withCredentials([string(credentialsId: 'Git', variable: 'GITHUB_TOKEN')]) {
-                        sh '''
+                        sh """
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
                         sed -i "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s/deploy/deploy.yaml
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git add python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
+                        git commit -m 'Updated the deploy yaml | Jenkins Pipeline' || echo "No changes to commit"
                         git remote -v
-                        git push https://github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:main
-                        '''                        
+                        git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:main
+                        """                        
                     }
                 }
             }
