--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
                     withCredentials([string(credentialsId: 'Git', variable: 'GITHUB_TOKEN')]) {
                         sh """
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        sed -i "s/32/${BUILD_NUMBER}/g" python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        sed -i "s/replaceImageTag/${BUILD_NUMBER}/g"  python-jenkins-argocd-k8s/deploy/deploy.yaml
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git add python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline' || echo "No changes to commit"
