--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -57,7 +57,7 @@ pipeline {
                         git add python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline' || echo "No changes to commit"
                         git remote -v
-                        git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:main
+                        git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:deploy
                         """                        
                     }
                 }
