--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
                         cat python-jenkins-argocd-k8s/deploy/deploy.yaml
                         sed -i "s#\\(image: .*:\\).*#\\1${BUILD_NUMBER}#g" python-jenkins-argocd-k8s/deploy/deploy.yaml
                         git add python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        git commit -m 'Updated the deploy yaml | Jenkins Pipeline' || echo "No changes to commit"
+                        git commit -am "update image to ${BUILD_NUMBER} [skip ci]"
                         git remote -v
                         git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:Deploy
                         """                        
