--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -47,8 +47,8 @@ pipeline {
         stage('Checkout K8S manifest SCM'){
             steps {
                 git credentialsId: 'Github', 
-                url: 'https://github.com/Maggi12-max/Jenkins-Zero-To-Hero.git',
-                branch: 'Deploy'
+                url: 'https://github.com/Maggi12-max/python-jenkins-argocd.git',
+                branch: 'main'
             }
         }
         
@@ -57,12 +57,12 @@ pipeline {
                 script{
                     withCredentials([string(credentialsId: 'Git', variable: 'GITHUB_TOKEN')]) {
                         sh """
-                        cat python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        sed -i "s#\\(image: .*:\\).*#\\1${BUILD_NUMBER}#g" python-jenkins-argocd-k8s/deploy/deploy.yaml
-                        git add python-jenkins-argocd-k8s/deploy/deploy.yaml
+                        cat deploy.yaml
+                        sed -i "s#\\(image: .*:\\).*#\\1${BUILD_NUMBER}#g" deploy.yaml
+                        git add deploy.yaml
                         git commit -am "update image to ${BUILD_NUMBER} [skip ci]"
                         git remote -v
-                        git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/Jenkins-Zero-To-Hero.git HEAD:Deploy
+                        git push https://${GITHUB_TOKEN}@github.com/Maggi12-max/python-jenkins-argocd.git HEAD:main
                         """                        
                     }
                 }
